k8s/node-2-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app-1
  template:
    metadata:
      labels:
        app: node-app-1
    spec:
      containers:
        - name: node-app
          image: node-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: node-app-1
spec:
  selector:
    app: node-app-1
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app-2
  template:
    metadata:
      labels:
        app: node-app-2
    spec:
      containers:
        - name: node-app
          image: node-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: node-app-2
spec:
  selector:
    app: node-app-2
  type: NodePort
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 30082
