k8s/node-load-balance.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-lb-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-lb-app
  template:
    metadata:
      labels:
        app: node-lb-app
    spec:
      containers:
        - name: node-server
          image: node-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: node-lb-app
spec:
  selector:
    app: node-lb-app
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30091
