k8s/node-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-ingress-app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-ingress-app-1
  template:
    metadata:
      labels:
        app: node-ingress-app-1
    spec:
      containers:
        - name: node-server
          image: node-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: node-ingress-app-1
spec:
  selector:
    app: node-ingress-app-1
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-ingress-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-ingress-app-2
  template:
    metadata:
      labels:
        app: node-ingress-app-2
    spec:
      containers:
        - name: node-server
          image: node-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: node-ingress-app-2
spec:
  selector:
    app: node-ingress-app-2
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: node.local
      http:
        paths:
          - path: /app1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: node-ingress-app-1
                port:
                  number: 8081
          - path: /app2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: node-ingress-app-2
                port:
                  number: 8082
